# aoc

./: .gitignore
2023/cpp17/day01/part02/: main.cpp
2023/cpp17/day02/part01/: main.cpp
2023/cpp17/day02/part02/: main.cpp
2023/cpp17/day03/part01/: main.cpp
2024/rust/day1/src/: part1.rs  part2.rs
2024/rust/day2/src/: main.rs
2024/ts/: package-lock.json  package.json  tsconfig.json
2024/ts/src/: d2p1.ts  d2p2.ts  d3p1.ts  helper.ts
concepts/: TEMPLATE_PS
concepts/Recursion/: ps5.cpp  ps7.cpp
day01/part01/: main.cpp
day01/part02/: main.cpp
ds/: singly-ll.cpp
ds-algo/: TEMPLATE_PS  Utils.hpp  main.cpp  run.sh
ds-algo/Recursion/: ps1.cpp  ps10.cpp  ps2.cpp  ps3.cpp  ps4.cpp  ps6.cpp  ps9.cpp
problems/: CMakeLists.txt  run.sh
problems/Math/: prime.cpp
problems/helper/: helper.hpp
